source/css/main.css
/* ... */
.iconBubble{
    background-color: var(--darkpurple);
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 50%;
    text-decoration: none;
    color: white;
}

.bottomContact{
    display: flex;
    justify-content: center;
    background-color: var(--darkblue);
    color: var(--gray);
    font-size: 24px;
    font-weight: 700;
    height: 83px;
    width: 100vw;
    text-align: center;
    position: fixed;
    bottom: 0;
}

.bottomContactGrid{
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 1fr;
    height: 100%;
    max-width: 1620px;
}

.iconCircle{
    background-color: #cfeaf9;
}

.contact1{
    grid-column: 1;
    display: flex;
    justify-content: center;
    align-items: center;
}

.contact2{
    grid-column: 2;
    grid-row: 1;
    display: flex;
    justify-content: center;
    align-items: center;
}

.blankSpace{
    width: 50px;
}

.ssBoxDescription{
    padding-top: 20px;
    display: flex;
    justify-content: center;
    text-align: left;
}

.descriptionText{
    width: 90%;
}

.ssBoxTitle{
    padding-top: 20px;
}

.false1, .false2, .false3{
    visibility: hidden;
}

.environmentBG{
    background-color: #f8f8f8;
}

.openSpaceDesc{
    background-color: #f8f8f8;
    width: 100%;
}

.openSpaceWhatIsGrid{
    padding-left: 10%;
    padding-right: 10%;
}

.boldOSTitle{
    font-weight: bold;
    font-size: 26px;
    padding-left: 10px;
    padding-right: 10px;
}

.OSExplanation{
    padding-bottom: 20px;
    padding-left: 10px;
    padding-right: 10px;
}

.color1{
    background-color: #ececec;
}

.color2{
    background-color: #e0e0e0;
}



@media screen and (max-width: 500px){
    .smallText500{
        font-size: 35px;
    }
    
    .smallerText500{
        font-size: 22px;
        text-align: center;
    }
}

@media screen and (min-width: 500px){
    .openSpaceBanner{
        height: 200px;
        background-color: black;
        padding-left: 10%;
        padding-right: 10%;
    }

}

@media screen and (min-width: 700px){

    .contentWrapper{
        height: 850px;
    }

    .msContainerMain{
        width: 90%;
    }

    .statementContainer{
        position: relative;
        top: 100px;
        right: 0px;
    }

    #titleBackground{
        justify-content: flex-end;
    }

    .idkbro{
        display: grid;
        grid-template-columns: 400px 1fr;
        height: 800px;
    }

    .colorBackground{
        background: radial-gradient(circle at top right, rgba(48, 8, 77, 0.75), rgba(48, 8, 77, 0.75) 20%, rgba(43, 3, 92, 0.85) 50%, rgb(255, 255, 255) 50.1%);
        border-radius: 5px;
    }

    #titleBackground div{
        height: 300px;
        width: 300px;
        margin-right: 25px;
        margin-top: 50px;
    }

    .evenBiggerStatement{
        align-items: flex-start;
        width: 250px;
        font-size: 26px;
    }

    .bigStatement{
        width: 250px;
        font-size: 22px;
    }

    .idkbro{
        height: 550px;
    }

    .subStatement{
        font-size: 34px;
        display: flex;
        justify-content: center;
        text-align: center;
        font-weight: 400;
        padding-bottom: 10px;
        color: var(--darkblue);
    }

    .innerFID{
        font-size: 26px;
        line-height: 40px;
    }

}


@media screen and (max-width: 700px){
  
    .ssBoxContainer{
        grid-template-rows: 120px 500px;     
    }

    .hideGetInvolved, .ssBoxDescription{
        height: 0px;
        visibility: hidden;
    }

    .calendar{
        grid-template-columns: repeat(7, 50px);
        grid-template-rows: repeat(6, 60px);
    }

    .dayGrid{
        display: grid;
        grid-template-columns: repeat(7, 50px);
    }

    .mtSwitchGrid{
        display: grid;
        grid-template-rows: 1fr;
        width: 350px;
    }

    .dayPeriodGrid{
        display: grid;
        grid-template-columns: repeat(3, 90px);
        column-gap: 40px;
    }

    .evenBiggerStatement{
    }
    
    .alphaGrid{
        height: 100%;
        display: grid;
        grid-template-rows: 100px 60px 1fr 140px;
    }

    .tbAlpha{
        background: linear-gradient(0.25turn, rgba(60, 45, 115, 0.60) 0%, rgba(0,0,0,0), rgba(60, 45, 115, 0.60) 98%),
        linear-gradient(0.5turn, rgba(0,0,0,0) 75%, #7226D9);
    }

    .catBox{
        height: 275px;
    }

    .bottomContact{
        font-size: 16px;
    }

    .donateGrid{
        display: grid;
        grid-template-columns: 1fr;
        grid-template-rows: 1fr 1fr;
    }

    .flexColEnd{
        justify-content: center;
    }

    .flexColCenter{
        justify-content: center;
    }

    .fpText{
        text-align: center;
    }

    .fpLink{
        display: flex;
        justify-content: center;
    }

    .donateFont, .supportFont{
        text-align: center;
    }

    .flexImageLeft{
        justify-content: center;
    }

    .openSpaceBanner{
        height: 320px;
        background-color: black;
        padding-left: 10%;
        padding-right: 10%;
    }


}

@media screen and (min-width: 900px){
    .colorBackground{
        background: radial-gradient(circle at top right, rgba(48, 8, 77, 0.75), rgba(48, 8, 77, 0.75) 20%, rgba(43, 3, 92, 0.85) 47%, rgb(255, 255, 255) 47.1%);
        border-radius: 5px;
    }

    #titleBackground div{
        height: 360px;
        width: 360px;
        margin-right: 25px;
        margin-top: 50px;
    }

    .evenBiggerStatement{
        align-items: flex-start;
        width: 350px;
        font-size: 34px;
    }

    .bigStatement{
        width: 350px;
        font-size: 28px;
        padding-top: 50px;
    }

    .circleCol{
        display: grid;
        grid-template-columns: 1fr 1fr 1fr;
    }

    .circleBoxGrid{
        grid-template-rows: 212px 70px 135px 90px 40px;
        width: 80%;
    }

    .idkbro{
        height: 700px;
    }
}
/* ... */

